Fix Plugin Verifier deprecations and override-only violations
Replace deprecated IntelliJ Platform APIs with modern equivalents:
- ReadAction.compute() → computeCancellable() with EDT/test fallbacks
- ProcessAdapter → ProcessListener interface
- AnActionEvent.createFromAnAction() + actionPerformed() → constructor + performActionDumbAwareWithCallbacks()
- addBrowseFolderListener() deprecated overload → TextBrowseFolderListener
- Messages.showChooseDialog() → JBPopupFactory popup chooser
- SlowOperations.allowSlowOperations() → invokeLater()
- FileChooserDescriptorFactory.createSingleFileDescriptor() → createSingleFileNoJarsDescriptor()

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>